tests/parsing/fail/empty_include.circom
include ;

template T() {
}

component main = T();
